2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (free_split_buffer): Correct free.

2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Parse quote amdevice.
	* server-src/amcheck.c: Send quoted amdevice.
	* server-src/planner.c: Send quoted amdevice.

2006-10-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (CNF_CTIMEOUT, CNF_DTIMEOUT, CNF_ETIMEOUT):
	  They are of type CONFTYPE_INT
	  (CONFTYPE_TIME are for value parsed as "hhmm"")
	* common-src/conffile.c (getconf_byname): Use conf_print().
	* common-src/conffile.h: Add comment.
	* server-src/amcheck.c, server-src/dumper.c, server-src/planner.c:
	  Use getconf_int to get timeout value.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix formating.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c, client-src/sendsize.c: Remove bogus fseek.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Quote amname.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Print an L_STATS with the hostname
	* server-src/reporter.c: Print hostname, org, config and date at the
				 beginning of the report

2006-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_cat),
	  common-src/packet.c (pkt_init, pkt_cat): Works correctly with
						   vsnprintf returning -1.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (libamanda_la_LIBADD) Remove @LTLIBOBJS@.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: stralloc(tapedev).
	* configure.in (EXAMPLE_TAPEDEV): Set to /dev/null if no tape-device.
	* example/amanda-client.conf.in, example/amanda.conf.in
	  example/chg-mcutil.conf.in: Use EXAMPLE_TAPEDEV.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloca.c, common-src/getcwd.c, common-src/mktime.c,